Correção lista.h retirado :bug:

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Code_Wiki C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(Code_Wiki main.c interface.c interface.h dados.c dados.h lista.c lista.h)
+add_executable(Code_Wiki main.c interface.c interface.h dados.c dados.h)
